--- a/Pandas/pandas_2_dataframes.ipynb
+++ b/Pandas/pandas_2_dataframes.ipynb
@@ -8855,7 +8855,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -8869,7 +8869,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.12"
+      "version": "3.9.6"
     }
   },
   "nbformat": 4,
